# Optimium-Examples

./: .gitattributes  .gitignore  README.md
Android/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
Android/libs/: opencv_java_shared_4.9.0.aar
Android/src/main/: AndroidManifest.xml
Android/src/main/res/values/: themes.xml
Android/src/main/res/xml/: file_paths.xml
Cpp/: CMakeLists.txt  Makefile  README.md  main.cpp
JVM/: build.gradle.kts  settings.gradle.kts
Python/base_example/: requirements.txt
Python/flask_serving/: README.md  requirements.txt  wsgi.py
Python/flask_serving/templates/: main.html
Python/quick_start/: README.md  example.py  face_detection_example.py  requirements.txt  util.py
Python/quick_start/optimium_model_output/: face_detection_short-x64_native_device_allocation.json  model_meta_debug.txt
Python/quick_start/optimium_model_output/opus/: geneach.opus  genmain.opus  opus-project.yml
Python/quick_start/optimium_model_output/opus/abs/: abs.opus
Python/quick_start/optimium_model_output/opus/add/: add.opus
Python/quick_start/optimium_model_output/opus/broadcast/: index_utils.opus
Python/quick_start/optimium_model_output/opus/common/: layerparams.opus  params.opus  uniontensor.opus
Python/quick_start/optimium_model_output/opus/concat/: concat.opus
Python/quick_start/optimium_model_output/opus/conv2d/: conv2d.opus  conv2dhelper.opus  conv2dhelper3.opus
Python/quick_start/optimium_model_output/opus/elu/: elu.opus
Python/quick_start/optimium_model_output/opus/exp/: exp.opus
(+82 files in other folders)
